# TugasBot

./: .breakpoints  .gitignore  configuration-dist.py  help.txt  main.py  main_backup.py  pyproject.toml  requirements.txt
GlobalExceptions/: ConfigurationErrorException.py
Helper/: dates.py  regex_patterns.py
Spreadsheet/: DatabaseHelper.py  Parser.py
Tugas/: ListOfTugas.py  Tugas.py  TugasInterface.py
TugasBot/: ScheduleInterface.py  TugasBot.py  TugasBotInterface.py
TugasBot/Exceptions/: CommandErrorException.py
