[tool.poetry]
name = "tugasdiscordbot-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gspread = "^3.7.0"
pytz = "^2021.1"
discord = "^1.0.1"
icecream = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
